MyRoutes activity added to manifest
- Its parent is also now set to the MainActivity so the Up button works now
- ListView also responds to taps made to the MyRoutes entry

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,12 +15,15 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.baliwanco.biyahero.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" android:parentActivityName="com.baliwanco.biyahero.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="MyRoutes" 
+            android:label="@string/app_name"
+            android:parentActivityName="com.baliwanco.biyahero.MainActivity">
         </activity>
     </application>
 
