Add TransitInfo and ViewMap
- They don't have designs yet, only added for the sake of the screen flow

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,15 +15,33 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.baliwanco.biyahero.MainActivity"
-            android:label="@string/app_name" android:parentActivityName="com.baliwanco.biyahero.MainActivity">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="MyRoutes" 
+        <activity
+            android:name="com.baliwanco.biyahero.MyRoutes"
             android:label="@string/app_name"
-            android:parentActivityName="com.baliwanco.biyahero.MainActivity">
+            android:parentActivityName="com.baliwanco.biyahero.MainActivity" >
+        </activity>
+        <activity
+            android:name="com.baliwanco.biyahero.ViewMap"
+            android:label="@string/title_activity_view_map"
+            android:parentActivityName="com.baliwanco.biyahero.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.baliwanco.biyahero.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.baliwanco.biyahero.TransitInfo"
+            android:label="@string/title_activity_transit_info"
+            android:parentActivityName="com.baliwanco.biyahero.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.baliwanco.biyahero.MainActivity" />
         </activity>
     </application>
 
