--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,6 +51,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.baliwanco.biyahero.MainActivity" />
         </activity>
+        <activity
+            android:name="com.baliwanco.biyahero.GTFSRWTest"
+            android:label="@string/title_activity_gtfsrwtest" >
+        </activity>
     </application>
 
 </manifest>
